python-test_driven_development/tests/5-text_indentation.txt
Module that provides text_identation function
~~~~~~~~~~~~~~~~~~~~~~~~
Prototype: def text_indentation(text):
~~~~~~~~~~~~~~~~~~~~~~~~

>>> text_indentation = __import__('5-text_indentation').text_indentation
>>> text_indentation('')
>>> text_indentation()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: text_indentation() missing 1 required positional argument: 'text'
>>> text_indentation(None)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/root/holbertonschool-higher_level_programming/python-test_driven_development/5-text_indentation.py", line 4, in text_indentation
    raise TypeError('text must be a string')
TypeError: text must be a string
>>> text_indentation(1234)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/root/holbertonschool-higher_level_programming/python-test_driven_development/5-text_indentation.py", line 4, in text_indentation
    raise TypeError('text must be a string')
TypeError: text must be a string